[gd_scene load_steps=2 format=2]

[ext_resource path="res://SceneComponents/AssetExplorer.gd" type="Script" id=1]

[node name="AssetExplorer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 22.0
columns = 2

[node name="SearchEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_right = 976.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Filter Assets..."

[node name="SearchClearButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 22.0
text = "Clear"

[node name="AssetItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
